--- a/mscore/manual/sources/MuseScore-es.html
+++ b/mscore/manual/sources/MuseScore-es.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_07bbf5296c1dd68d5fef642e19fb10b3.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_11b89541b7a4bc7c419474ed0e566f4f.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
@@ -12,8 +12,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/es/manual/manual' />
-    <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_9.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_cbd17c717009b015b29b604f2a31b2e3.css" />
+    <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_2201016fb500fdc8a6a1e9918a29addc.css" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -477,6 +477,21 @@ al siguiente pentagrama.<br />
 <img src="/sites/musescore.org/files/tuplet2_0.png" alt="Octavo de tresillo seguido por silencios" title="Octavo de tresillo seguido por silencios" width="248" height="63" class="inline" /></p>
 <p>Después podrán editarse<br />
 <img src="/sites/musescore.org/files/tuplet3_0.png" alt="Tres octavos formando un tresillo" title="Tres octavos formando un tresillo" width="244" height="70" class="inline" /></p>
+<h3>Modo de entrada de notas</h3>
+<p>La introducción de grupos irregulares funciona de un modo ligeramente distinto en modo <a href="http://musescore.org/es/manual/ingresar-notas" title="ingresar notas">ingresar notas</a> . En la versión 0.9.5 y posteriores, debes atender a la duración de las notas primero y después introducir la entonación. Abajo se presentan las instrucciones necesarias para hacer tresillos de corchea.</p>
+<ol>
+<li>Activa el modo de entrada de notas</li>
+<li>Asegurate de que el puntero de entrada de nota se haya en el lugar donde deseas comenzar el tresillo(usa las flechas derecha e izquierda si es necesario)</li>
+<li>Escoge una negra de la barra de herramientas para especificar la duración del tresillo completo</li>
+<li><kbd><samp class="menu">Notas</samp> → <samp class="submenu">Grupos Irregulares</samp> → <samp class="menuitem">Tresillo</samp></kbd> para especificar el tipo de grupo irregular</li>
+<li>Date cuenta de que se selecciona automáticamente una corchea en la barra de herramientas. Presiona sobre el pentagrama para añadir la entonación de las notas</li>
+</ol>
+<h3>Propiedades</h3>
+<p>Modificar las propiedades de un grupo irregular, presiona con el botón derecho de ratón en el número del grupo irregular, y escoge <kbd><samp class="menuitem">Propiedades del Grupo Irregular...</samp></kbd>.<br />
+<img src="/sites/musescore.org/files/tuplet-properties.png" alt="Tuplet Properties dialog" title="Tuplet Properties dialog" width="245" height="223" class="inline" /></p>
+<p>La sección "Número" del diálogo de propiedades te permite mostrar un entero, una proporción con dos enteros o ningún número.</p>
+<p>En la sección "Llave" puedes escoger entre mostrar una llave para delimitar el grupo irregular no mostrar nada. La opción "auto encorchetar" oculta la llave para notas agrupadas y la muestra si el grupo irregular incluye notas no agrupadas o silencios.</p>
+<p><img src="/sites/musescore.org/files/5-6-tuplet.png" alt="Tuplet with a 5:6 ratio and auto beam" title="Tuplet with a 5:6 ratio and auto beam" width="134" height="57" class="inline" /></p>
   </div>
 <div id="node-196" class="section-3">
   <h1 class="book-heading">Trémolo</h1>
@@ -739,4 +754,4 @@ Las sílabas son conectadas con un guión.</li>
     <div class="print-links"></div>
   </body>
 </html>
-<!-- Page cached by Boost @ 2010-01-31 23:07:03, expires @ 2010-02-01 02:07:03 -->
+<!-- Page cached by Boost @ 2010-02-23 07:34:47, expires @ 2010-02-23 10:34:47 -->
