--- a/mscore/manual/sources/MuseScore-pl.html
+++ b/mscore/manual/sources/MuseScore-pl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_d3eaac2f3bc04d0ba3eeacb7669f66d8.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_44357de082195f9cbf59b9e26c593f24.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
@@ -12,8 +12,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/pl/podr%C4%99cznik/podr%C4%99cznik' />
-    <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_9.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_cbd17c717009b015b29b604f2a31b2e3.css" />
+    <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_2201016fb500fdc8a6a1e9918a29addc.css" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -131,7 +131,7 @@ Możesz teraz włączyć MuseScore z Aplikacji lub SpotLighta.</p>
   <h1 class="book-heading">Utwórz nową partyturę</h1>
   <p>Z głównego menu wybierz <kbd><samp class="menu">Plik</samp> → <samp class="menuitem">Nowy...</samp></kbd>. To otwiera kreatora nowej partytury. </p>
 <h3 id="newscore-titles">Tytuł, kompozytor i inne informacje</h3>
-<p><img src="/sites/musescore.org/files/newscore-tytuł.png" alt="Kreator nowej partytury: Tytuł i inne teksty" title="Kreator nowej partytury: Tytuł i inne teksty" width="600" height="497" class="inline" /></p>
+<p><img src="/sites/musescore.org/files/newscore-tytul_0.png" alt="Kreator nowej partytury: Tytuł i inne teksty" title="Kreator nowej partytury: Tytuł i inne teksty" width="600" height="497" class="inline" /></p>
 <p>Wprowadź tytuł, kompozytora i inne informacje, tak jak to widać powyżej. Zwróć uwagę na dwie możliwości na dole:</p>
 <ul>
 <li>Utwórz nową partyturę z szablonu</li>
@@ -168,7 +168,7 @@ Na Macu szukaj w /Applications/MuseScore.app/Contents/Resources/templates</p>
 <div class="field field-type-filefield field-field-file">
     <div class="field-items">
             <div class="field-item odd">
-                    <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/newscore-tytuł.png" type="image/png; length=112291">newscore-tytuł.png</a></div>        </div>
+                    <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/newscore-tytul_0.png" type="image/png; length=112291">newscore-tytul.png</a></div>        </div>
               <div class="field-item even">
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/newscore-instrumenty_0.png" type="image/png; length=151451">newscore-instrumenty.png</a></div>        </div>
               <div class="field-item odd">
@@ -1124,4 +1124,4 @@ Ramki wertykalne dodają pustą przestrzeń pomiędzy, lub przed systemami. Ich 
     <div class="print-links"></div>
   </body>
 </html>
-<!-- Page cached by Boost @ 2010-01-31 23:26:32, expires @ 2010-02-01 02:26:32 -->
+<!-- Page cached by Boost @ 2010-02-23 07:40:44, expires @ 2010-02-23 10:40:44 -->
